# agentic-artist

./: README.md  pyproject.toml
advice_collector/: .env.example  .gitignore  main.py  pyproject.toml
advice_collector/app/: adviser_repository.py  config.py  x_comment.py  x_comment_dispatcher.py
advice_collector/app/contract_handlers/: smart_contract_handler.py
advice_collector/app/objects/: x_comment.py
advice_collector/app/repositories/: i_adviser_repository.py
apis/: README.md
apis/midjorney_api/: index.ts  package-lock.json  package.json  readme.md  tsconfig.json
apis/post_new_art/: Dockerfile  README.md  docker-compose.yml  index.py  main.py
contracts/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
frontend/: README.md
frontend/token-claim-page/: package.json
infra/: .gitignore  main.tf  terraform.tfvars  variables.tf
midjorney_api/: dockerfile
post_new_art/: .env.example  Dockerfile  docker-compose.yml  index.py  main.py  pyproject.toml  test_run_artist.py  test_run_prompt_organizer.py
post_new_art/app/: agents.py  config.py  image_generation_prompt.py
post_new_art/app/agents/: agent_factory.py  agent_persona.py  artist_agent.py  prompt_organizer.py
post_new_art/app/agents/dependencies/: artist_agent.py  sns_marketer_agent.py
post_new_art/app/agents/persona/: artist.py  orchesrator.py  prompt_organizer.py  sns_marketer.py
post_new_art/app/agents/role/: artist.py  orchesrator.py  orchestrator.py  prompt_organizer.py  sns_marketer.py
post_new_art/app/dependencies/: artist_agent.py  sns_marketer_agent.py
post_new_art/tests/e2e/: test_artist_agent.py  test_pinata_client.py  test_prompt_organizer_agent.py
(+51 files in other folders)
