[project]
name = "minimum-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.69",
    "pydantic-ai>=0.0.21",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "supabase>=2.12.0",
]
