[project]
name = "advice_collector"
version = "0.1.0"
description = "A project for collecting and managing advice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=6.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "supabase>=2.12.0",
    "pytest>=8.3.4",
]

[tool.isort]
line_length = 120 
