[project]
name = "post_new_art"
version = "0.1.0"
description = "A project for managing art posting and orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=6.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pydantic-ai>=0.0.21",
    "supabase>=2.12.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.isort]
line_length = 120 