[project]
name = "post_new_art"
version = "0.1.0"
description = "A project for managing art posting and orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pydantic-ai>=0.0.21",
    "supabase>=2.12.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "loguru>=0.7.3",
    "tweepy>=4.15.0",
]
